[UI] Fix for Layout Overflow Bug

--- a/src/clarity-angular/layout/_layout.clarity.scss
+++ b/src/clarity-angular/layout/_layout.clarity.scss
@@ -16,6 +16,9 @@
         height: 100vh;
         background: $gray-lighter;
 
+        //Needed for Firefox
+        overflow: hidden;
+
         .alert.alert-app-level {
             flex: 0 0 auto;
             overflow-x: hidden;
